feat: ws connexion with utils

--- a/apps/stream-components/src/app/app.component.html
+++ b/apps/stream-components/src/app/app.component.html
@@ -1,6 +1,4 @@
 <div class="grid">
-  <button (click)="userService.commands.refreshUser('1')">Refersh 1</button>
-  <button (click)="manual()">Refersh 1 manual</button>
+  <button (click)="addUser()">Add user</button>
 </div>
-<pre>{{ user1 | push | json }}</pre>
 <pre>{{ users | push | json }}</pre>
