--- a/apps/stream-components/src/app/app.component.html
+++ b/apps/stream-components/src/app/app.component.html
@@ -1,4 +1,12 @@
 <div class="grid">
   <button (click)="addUser()">Add user</button>
 </div>
+<div class="grid">
+  <button (click)="isLogged()">IsLogged</button>
+</div>
+<form [formGroup]="formLogIn" (ngSubmit)="handleFormSignIn()">
+  <input type="text" placeholder="email" formControlName="email" />
+  <input type="password" placeholder="password" formControlName="password" />
+  <button type="submit"></button>
+</form>
 <pre>{{ users | push | json }}</pre>
