feat: clean deps & use ws instead of sse

--- a/apps/stream-components/src/app/signin/page/index/index-page.component.html
+++ b/apps/stream-components/src/app/signin/page/index/index-page.component.html
@@ -1,1 +1,5 @@
-<span>SignIn</span>
+<button (click)="addUser()">Add user</button>
+
+<pre *rxFor="let message of state.select('users')">{{
+  message | json
+}}</pre>
