--- a/apps/stream-components/src/app/signin/page/index/index-page.component.html
+++ b/apps/stream-components/src/app/signin/page/index/index-page.component.html
@@ -1,5 +1,10 @@
-<button (click)="addUser()">Add user</button>
-
-<pre *rxFor="let message of state.select('users')">{{
-  message | json
-}}</pre>
+<div class="grid grid-cols-1 gap-y-4 overflow-hidden">
+  <div
+    *rxFor="let message of state.select('messages')"
+    [@bounceInLeftOnEnter]
+    class="bg-white rounded-lg p-3"
+  >
+    <p>{{ message.displayName }}</p>
+    <p>{{ message.message }}</p>
+  </div>
+</div>
