--- a/apps/stream-components/src/app/signin/page/index/index-page.component.html
+++ b/apps/stream-components/src/app/signin/page/index/index-page.component.html
@@ -5,6 +5,6 @@
     class="bg-white rounded-lg p-3"
   >
     <p>{{ message.displayName }}</p>
-    <p>{{ message.message }}</p>
+    <p>{{ message.content }}</p>
   </div>
 </div>
