--- a/apps/stream-components/src/styles.scss
+++ b/apps/stream-components/src/styles.scss
@@ -2,4 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+blockquote,
+dl,
+dd,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hr,
+figure,
+p,
+pre,
+label {
+  @apply text-slate-700;
+}
+
+html, body {
+  @apply h-full;
+}
+
 /* You can add global styles to this file, and also import other style files */
+@import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css";
+
+@import '~@angular/cdk/overlay-prebuilt.css';
